initial html layout complete

--- a/index.html
+++ b/index.html
@@ -4,8 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+    <header>
+        <h1>Alex Hoskins</h1>
+        <nav class="navigation">
+            <a href="index.html" class="home">Home</a>
+            <a href="about.html" class="about">About</a>
+            <a href="contact.html" class="contact">Contact</a>
+            <a href="projects.html" class="projects">Projects</a>
+        </nav>
+    </header>
+
+    <section class="about-me">
+        <div class="about-me-left">
+            <div class="image-container">
+                <img src="" alt="Picture of Alex Hoskins">
+            </div>
+        </div>
+        <div class="about-me-right">
+            <h2>Alex Hoskins</h2>
+            <button><a href="projects.html">My Projects</a></button>
+            <p>I am an aspiring Software Engineer attending Lambda School in order to become a full-stack Web Developer. You will find here my current projects.</p>
+        </div>
+    </section>
+
+    <section class="projects">
+        <div class ="project-one">
+            <div class="project-image-containers">
+                <img src="" alt="">
+            </div>
+            <h3>Project One</h3>
+        </div>
+        <div class ="project-two">
+            <div class="project-image-containers">
+                <img src="" alt="">
+            </div>
+            <h3>Project Two</h3>
+        </div>
+        <div class ="project-three">
+            <div class="project-image-containers">
+                <img src="" alt="">
+            </div>
+            <h3>Project Three</h3>
+        </div>
+        <div class ="project-four">
+            <div class="project-image-containers">
+                <img src="" alt="">
+            </div>
+            <h3>Project Four</h3>
+        </div>
+        <div class ="project-five">
+            <div class="project-image-containers">
+                <img src="" alt="">
+            </div>
+            <h3>Project Five</h3>
+        </div>
+        <div class ="project-six">
+            <div class="project-image-containers">
+                <img src="" alt="">
+            </div>
+            <h3>Project Six</h3>
+        </div>
+        <div class ="project-seven">
+            <div class="project-image-containers">
+                <img src="" alt="">
+            </div>
+            <h3>Project Seven</h3>
+        </div>
+        <div class ="project-eight">
+            <div class="project-image-containers">
+                <img src="" alt="">
+            </div>
+            <h3>Project Eight</h3>
+        </div>
+    </section>
+
+    <footer>
+        <h4>Like what you see?</h4>
+        <button><a href="contact.html">Contact Me</a></button>
+    </footer>
     
 </body>
 </html>
