spiderweb added to name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="about-me-right">
-            <h2>Alex Hoskins</h2>
+            <h2>Alex Hoskins🕸</h2>
             <button id"project-button"><a href="projects.html">My Projects</a></button>
             <p>I am an aspiring Software Engineer attending Lambda School in order to become a full-stack Web Developer. You will find here my current projects.</p>
         </div>
