Made some tweaks with spacing and width

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <h1>Alex Hoskins</h1>
         <nav class="navigation">
@@ -88,6 +89,7 @@
         <h4>Like what you see?</h4>
         <button><a href="contact.html">Contact Me</a></button>
     </footer>
+    </div>
     
 </body>
 </html>
