corrected and simplified project to match mvp

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="style/index.css"/>
 </head>
 <body>
-    <div class="container">
+    
     <header>
         <h1>Alex Hoskins</h1>
         <nav class="navigation">
@@ -22,74 +22,72 @@
     </header>
 
     <section class="about-me">
-        <div class="about-me-left">
-            <div class="image-container">
-                <img src="https://images.unsplash.com/photo-1529335764857-3f1164d1cb24?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHNwaWRlcm1hbnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" alt="Picture of Alex Hoskins">
-            </div>
-        </div>
+        <img src="https://picsum.photos/600/400" alt="Random Image">
         <div class="about-me-right">
-            <h2>Alex Hoskins🕸</h2>
-            <button id"project-button"><a href="projects.html">My Projects</a></button>
-            <p>I am an aspiring Software Engineer attending Lambda School in order to become a full-stack Web Developer. You will find here my current projects.</p>
+            <h2>Alex Hoskins</h2>
+            <button><a href="projects.html">My Projects</a></button>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, et doloribus perferendis eligendi impedit quas optio laboriosam porro mollitia delectus facilis fuga quaerat hic nisi enim cumque in sint velit.</p>
         </div>
     </section>
 
     <section class="projects">
-        <div class ="project-one">
-            <div class="project-image-containers">
-                <img src="https://images.unsplash.com/photo-1614461216444-e4d757e5dc3f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8c3BpZGVybWFufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+
+         <div class="row-one">
+
+            <div class ="project">
+                <div class="project-image-containers">
+                 <img src="https://picsum.photos/200/200" alt="test image">
+                </div>
+                <h3>Project One</h3>
             </div>
-            <h3>Project One</h3>
-        </div>
-        <div class ="project-two">
-            <div class="project-image-containers">
-                <img src="https://images.unsplash.com/photo-1524481905007-ea072534b820?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8c3BpZGVybWFufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+
+            <div class ="project">
+                <img src="https://picsum.photos/200/200" alt="test image">                
+                <h3>Project Two</h3>
             </div>
-            <h3>Project Two</h3>
-        </div>
-        <div class ="project-three">
-            <div class="project-image-containers">
-                <img src="https://images.unsplash.com/photo-1558680689-ce686c5e2fb8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fHNwaWRlcm1hbnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="">
+
+            <div class ="project">
+                <img src="https://picsum.photos/200/200" alt="test image">                
+                <h3>Project Three</h3>
             </div>
-            <h3>Project Three</h3>
-        </div>
-        <div class ="project-four">
-            <div class="project-image-containers">
-                <img src="https://images.unsplash.com/photo-1613276017067-ef618366152a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjV8fHNwaWRlcm1hbnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+
+            <div class ="project">
+                <img src="https://picsum.photos/200/200" alt="test image">    
+                <h3>Project Four</h3>
             </div>
-            <h3>Project Four</h3>
         </div>
-        <div class ="project-five">
-            <div class="project-image-containers">
-                <img src="https://images.unsplash.com/photo-1605936995823-ee55b35a586f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzB8fHNwaWRlcm1hbnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+
+        <div class="row-two">
+
+            <div class ="project">
+                <img src="https://picsum.photos/200/200" alt="test image">
+                <h3>Project Five</h3>
             </div>
-            <h3>Project Five</h3>
-        </div>
-        <div class ="project-six">
-            <div class="project-image-containers">
-                <img src="https://images.unsplash.com/photo-1623016717281-2642f5142f99?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fHNwaWRlcm1hbnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+
+            <div class ="project">
+                <img src="https://picsum.photos/200/200" alt="test image">
+                <h3>Project Six</h3>
             </div>
-            <h3>Project Six</h3>
-        </div>
-        <div class ="project-seven">
-            <div class="project-image-containers">
-                <img src="https://images.unsplash.com/photo-1613734086935-4cd1a02e9256?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzd8fHNwaWRlcm1hbnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+
+            <div class ="project">
+                <img src="https://picsum.photos/200/200" alt="test image">
+                <h3>Project Seven</h3>
             </div>
-            <h3>Project Seven</h3>
-        </div>
-        <div class ="project-eight">
-            <div class="project-image-containers">
-                <img src="https://images.unsplash.com/photo-1609741199878-3e8ebdb1dbc7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTh8fHNwaWRlcm1hbnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+
+            <div class ="project">
+                <img src="https://picsum.photos/200/200" alt="test image">
+                <h3>Project Eight</h3>
             </div>
-            <h3>Project Eight</h3>
+
         </div>
+
     </section>
 
     <footer>
         <h4>Like what you see?</h4>
         <button><a href="contact.html">Contact Me</a></button>
     </footer>
-    </div>
+
     
 </body>
 </html>
